2007-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For Windows MinGW-based build, find Ghostscript
	fonts installed under C:/Program Files/.
	* VisualMagick/bin/delegates.mgk: Adjust quoting to Ghostscript arguments
	so that Ghostscript DLL is passed correct commands.
	* config/delegates.mgk.in: Adjust quoting to Ghostscript arguments
	so that Ghostscript DLL is passed correct commands.
	* configure.ac: Provide defaults for GSColorAlphaDevice and GSGrayDevice.
	* magick/nt_base.c (NTGhostscriptGetString): Support "GPL Ghostscript".

2007-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/ps.c (WritePSImage): Improved Postscript writer
	performance.

2007-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (AllocateImageProfileIterator): New function to
	allocate an image profile iterator.
	(DeallocateImageProfileIterator): New function to deallocate an
	image profile iterator.
	(NextImageProfile): New function to advance the image profile
	iterator to the next profile.
	* magick/image.h (Image): Profiles are now stored in a generic
	container.  As planned years ago, the color_profile, iptc_profile,
	generic_profile, and generic_profiles members are now removed.

2007-09-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/bmp.c Ability to read true color bitmap with invalid palette size
	like other readers do.

2007-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (ClonePixelCacheMethods): Remove DLL export.
	(DestroyCacheInfo): Remove DLL export.
	(GetCacheInfo): Remove DLL export.
	(ReferenceCache): Remove DLL export.

2007-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): More tweaks to obtain the desired
	behavior when converting to a bilevel image.
	* coders/tiff.c (WriteTIFFImage): Logic which decided the output
	subformat to write was too convoluted to understand, and in fact