@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2007-09-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/utility.c (GetExecutionPath): Add support for Apple OS-X,
+        Linux, and FreeBSD.
+
+</UL>
+<p>
 2007-09-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
